--- a/clashN/clashN/Views/MessageSampleDialog.xaml
+++ b/clashN/clashN/Views/MessageSampleDialog.xaml
@@ -18,8 +18,7 @@
         <TextBlock
             x:Name="Message"
             Grid.Row="0"
-            Margin="0,6,0,0"
-            FontSize="18" />
+            Margin="0,6,0,0" />
         <Button
             Grid.Row="1"
             Margin="16,16,16,0"
