--- a/clashN/clashN/Views/SettingsView.xaml
+++ b/clashN/clashN/Views/SettingsView.xaml
@@ -87,7 +87,7 @@
                             Grid.Row="0"
                             Grid.Column="0"
                             Margin="8"
-                            Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                            Style="{StaticResource ModuleTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsCore}" />
 
                         <TextBlock
@@ -95,7 +95,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsMixedPort}" />
                         <TextBox
                             x:Name="txtMixedPort"
@@ -109,7 +109,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsSocksPort}" />
                         <TextBox
                             x:Name="txtSocksPort"
@@ -123,7 +123,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsHttpPort}" />
                         <TextBox
                             x:Name="txtHttpPort"
@@ -137,7 +137,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsAPIPort}" />
                         <TextBox
                             x:Name="txtAPIPort"
@@ -151,7 +151,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsAllowLAN}" />
                         <ToggleButton
                             x:Name="togAllowLANConn"
@@ -165,7 +165,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsIpv6}" />
                         <ToggleButton
                             x:Name="togEnableIpv6"
@@ -179,7 +179,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsLogLevel}" />
                         <ComboBox
                             x:Name="cmbLogLevel"
@@ -199,7 +199,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsMixin}" />
                         <ToggleButton
                             x:Name="togEnableMixinContent"
@@ -212,7 +212,8 @@
                             Grid.Row="9"
                             Grid.Column="0"
                             Margin="2,0,8,0"
-                            Content="{x:Static resx:ResUI.TbSettingsEditMixin}" />
+                            Content="{x:Static resx:ResUI.TbSettingsEditMixin}"
+                            Style="{StaticResource DefButton}" />
                     </Grid>
                 </TabItem>
 
@@ -240,7 +241,7 @@
                             Grid.Row="0"
                             Grid.Column="0"
                             Margin="8"
-                            Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                            Style="{StaticResource ModuleTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsClashN}" />
 
                         <TextBlock
@@ -248,7 +249,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsStartBoot}" />
                         <ToggleButton
                             x:Name="togAutoRun"
@@ -262,7 +263,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsStatistics}" />
                         <ToggleButton
                             x:Name="togEnableStatistics"
@@ -276,7 +277,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsTLS13}" />
                         <ToggleButton
                             x:Name="togEnableSecurityProtocolTls13"
@@ -290,7 +291,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsAutoUpdate}" />
                         <TextBox
                             x:Name="txtautoUpdateSubInterval"
@@ -304,7 +305,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsAutoTest}" />
                         <TextBox
                             x:Name="txtautoDelayTestInterval"
@@ -318,7 +319,7 @@
                             Grid.Column="0"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsSubConvert}" />
                         <ComboBox
                             x:Name="cmbSubConvertUrl"
@@ -333,13 +334,15 @@
                             Grid.Row="9"
                             Grid.Column="0"
                             Margin="8"
-                            Content="{x:Static resx:ResUI.TbSettingsSetUWP}" />
+                            Content="{x:Static resx:ResUI.TbSettingsSetUWP}"
+                            Style="{StaticResource DefButton}" />
                         <Button
                             x:Name="btnSetGlobalHotkey"
                             Grid.Row="10"
                             Grid.Column="0"
                             Margin="8"
-                            Content="{x:Static resx:ResUI.TbGlobalHotkeySetting}" />
+                            Content="{x:Static resx:ResUI.TbGlobalHotkeySetting}"
+                            Style="{StaticResource DefButton}" />
 
                     </Grid>
 
@@ -362,13 +365,13 @@
                             Grid.Row="0"
                             Grid.Column="0"
                             Margin="8"
-                            Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                            Style="{StaticResource ModuleTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsSystemproxy}" />
                         <TextBlock
                             Grid.Row="1"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsExceptionTip}" />
                         <TextBox
                             x:Name="txtsystemProxyExceptions"
@@ -388,7 +391,7 @@
                             Grid.Row="3"
                             Margin="8"
                             VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignBody2TextBlock}"
+                            Style="{StaticResource ListItemTitle}"
                             Text="{x:Static resx:ResUI.TbSettingsAdvancedProtocol}" />
                         <ComboBox
                             x:Name="cmbsystemProxyAdvancedProtocol"
